--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,63 +1,97 @@
-.navbar{
+.navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin: 20px 120px;
 }
-.nav-menu{
+
+.logo-title {
+    position: relative;
+}
+
+.logo-title h1 {
+    padding: 0px 20px;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.logo-title img {
+
+    left: 110px;
+    right: 0;
+    bottom: 4px;
+    z-index: -1;
+    width: 50px;
+
+    position: absolute;
+
+
+}
+
+.nav-menu {
     display: flex;
     align-items: center;
     list-style: none;
     gap: 45px;
     font-size: 15px;
 }
-.nav-connect{
+
+.nav-connect {
     padding: 15px 20px;
     border-radius: 50px;
-    background: linear-gradient(267deg,#DA7C25 0.36%,#B923E1 102.06%);
-    font-size:16px;
+    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
+    font-size: 16px;
     cursor: pointer;
     transition: 0.5s;
 }
-.nav-connect:hover{
+
+.nav-connect:hover {
     transform: scale(1.05);
 }
 
-.nav-menu li{
+.nav-menu li {
     display: flex;
     flex-direction: column;
-    gap:3px;
+    gap: 3px;
     cursor: pointer;
 }
-.nav-menu li img{
+
+.nav-menu li img {
     display: flex;
     margin: auto;
     height: 12px;
     width: 37px;
 
 }
-.anchor-link{
+
+.anchor-link {
     color: white;
     text-decoration: none;
 }
-.nav-mob-close{
+
+.nav-mob-close {
     display: none;
 }
-.nav-mob-open{
+
+.nav-mob-open {
     display: none;
 }
-@media(max-width:768px){
-    .nav-connect{
+
+@media(max-width:768px) {
+    .nav-connect {
         display: none;
     }
-    .navbar{
+
+    .navbar {
         margin: 20px 6%;
     }
-    .nav-mob-open{
+
+    .nav-mob-open {
         display: block;
         position: absolute;
         right: 30px;
     }
+
     .nav-mob-close {
         display: block;
         position: absolute;
@@ -65,7 +99,8 @@
         right: 7%;
         width: 30px;
     }
-   .nav-menu {
+
+    .nav-menu {
         position: fixed;
         flex-direction: column;
         align-items: start;
@@ -79,11 +114,17 @@
         right: -300px;
         padding-top: 100px;
         right: -350px;
-}
-.nav-menu li{
-    font-size: 22px;
-    padding-left: 50px;
-    flex-direction: row;
-    gap: 20px;
-}
+    }
+
+    .nav-menu li {
+        font-size: 22px;
+        padding-left: 50px;
+        flex-direction: row;
+        gap: 20px;
+    }
+
+    .logo-title img {
+        width: 40px;
+
+    }
 }
