--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -67,6 +67,7 @@
 .hero-resume a {
     text-decoration: none;
     color: white;
+   
 }
 
 @media (max-width: 768px) {
@@ -100,8 +101,13 @@
     border-radius: 40px;
 }
 .hero-resume{
-    padding: 20px 50px;
+    padding: 18px 30px;
     border-radius: 40px;
+   
     
+}
+.hero-resume a{
+    font-size: 14px;
+
 }
 }
